k8s/web/nginx/03_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-pod
  template:
    metadata:
      labels:
        app: nginx-pod
    spec:
      volumes:
      - name: nginx-config-volume
        configMap:
          name: nginx-config
      - name: htmldir
        emptyDir: {}
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-config-volume
          mountPath: /etc/nginx/conf.d
        - name: htmldir
          mountPath: /usr/share/nginx/html
        resources:
           requests:
             cpu: "0.01"
             memory: "16Mi"
           limits:
             cpu: "0.02"
             memory: "32Mi"
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 2
          periodSeconds: 5
        livenessProbe:
          httpGet:
             path: /
             port: 80
          initialDelaySeconds: 2
          periodSeconds: 5
        startupProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 2
